--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,137 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>
-        Hello World
-    </h1>
-    <img src="/assets/images/cat.jpeg" alt="" width="300">
+   <header>
+       <div class="container-main">
+           <div class="text">
+               Ketija ir awesome, Jānis arī ir ok!!!
+            </div>
+            <div>
+                <nav class="navigation">
+                    <a href="">Home</a>
+                    <a href="">About</a>
+                    <a href="">Portfolio</a>
+                    <a href="">Blogs</a>
+                    <a href="">Contact</a>
+                </nav>
+            </div>
+       </div>
+   </header>
+    <div class="title">
+        <div class="title1">Creative Agency</div>
+        <div>
+            <h1>HERO HEADER</h1>
+        </div>
+        <div class="title2">The best in town.</div>
+    </div>
 
+    <div class="color">
+        Colors
+    </div>
+    <div class="line"><svg width="1200" height="1" viewBox="0 0 1288 1" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <path fill-rule="evenodd" clip-rule="evenodd" d="M1288 1H0V0H1288V1Z" fill="black"/>
+        </svg>
+    </div>
 
-    <script src="/scripts.js"></script>
+    <div class="button-line1">
+        <button class="button button--1"></button>
+        <button class="button button--2"></button>
+        <button class="button button--3"></button>
+        <button class="button button--4"></button>
+        <button class="button button--5"></button>
+        <button class="button button--6"></button>
+    </div>
+
+    <div class="container-grid">
+        <button class="button button--7"></button>
+        <button class="button button--8"></button>
+        <button class="button button--9"></button>
+        <button class="button button--10"></button>
+        <button class="button button--11"></button>
+        <button class="button button--12"></button>
+        <button class="button button--13"></button>
+        <button class="button button--14"></button>
+        <button class="button button--15"></button>
+        <button class="button button--16"></button>
+        <button class="button button--17"></button>
+        <button class="button button--18"></button>
+        <button class="button button--19"></button>
+    </div>
+
+    <div class="container-line2">
+        <div class="btn-group1">
+            <button class="btn21"></button>
+            <button class="btn22"></button>
+        </div>
+
+        <div class="btn-group2">
+            <button class="btn23"></button>
+            <button class="btn24"></button>
+        </div>
+
+        <div class="btn-group3">
+            <button class="btn25"></button>
+            <button class="btn26"></button>
+        </div>
+    </div>
+
+    <div>
+        <h6>SELECTED WORKS</h6>
+    </div>
+
+    <div class="container-pictures">
+        <div class="pictures picture--1"><img src="\assets\images\picture1.png" /></div>
+        <div class="pictures picture--2"><img src="\assets\images\picture2.png" /></div>
+        <div class="pictures picture--3"><img src="\assets\images\picture3.png" /></div>
+        <div class="pictures picture--4"><img src="\assets\images\picture4.png" /></div>
+        <div class="pictures picture--5"><img src="\assets\images\picture5.png" /></div>
+        <div class="pictures picture--6"><img src="\assets\images\picture6.png" /></div>  
+    </div>
+
+    <div class="btn-sub">
+        <button class="btn-sub1">Subscription</button>
+        <button class="btn-sub2">Subscription</button>
+        <button class="btn-sub3">Subscription</button>   
+    </div>
+
+    <div class="container-card">
+        <div class="card">
+            <div class="title-text">
+                <h3>Freelance Version</h3>
+                <h2>Free</h2>
+            </div>
+
+            <div class="list">
+                <ul>
+                    <li>First option</li>
+                    <li>Second option</li>
+                    <li>Third option</li>
+                    <li>Fourth option</li>
+                    <li>Fifth option</li>
+                </ul>
+            </div>
+
+            <div class="but-subscription">
+                <button class="subsr">Subscription</button>
+            </div>
+
+        </div>
+
+    </div>
+
+    <footer>
+       <div class="footer">
+            <div>
+                <nav class="navigation">
+                    <a href="">Home</a>
+                    <a href="">About</a>
+                    <a href="">Portfolio</a>
+                    <a href="">Blogs</a>
+                    <a href="">Contact</a>
+                </nav>
+            </div>
+       </div>
+    </footer>
+
 </body>
 </html>
